app_deploy/mongo_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo-pod
  labels:
    name: mongo-pod
    app: demo-voting-app

spec:
  containers:
    - name: mongo
      image: mongo
      ports:
        - containerPort: 27017
