app_deploy/result_app_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: result-app-pod
  labels:
    name: result-app-pod
    app: demo-voting-app

spec:
  containers:
    - name: result-app
      image: danishdd/voting_result_app:latest
      ports:
        - containerPort: 80
