app_deploy/test_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-voting-app-deployment
  labels:
    name: test-voting-app-deployment
    app: demo-voting-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: voting-app-deployment

  template:
    metadata:
      labels:
        app: voting-app-deployment

    spec: 
      containers:
      - name: voting-app
        image: danishdd/voting-app:latest
        ports:
          - containerPort: 80
      - name: voting-app-2
        image: danishdd/voting-app:v1
        ports:
          - containerPort: 90
