app_deploy/voting_app_pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting
  labels:
    app: voting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting
  template:
    metadata:
      labels:
        app: voting
    spec:
      containers:
        - name: voting
          image: danishdd/voting_app:latest
          imagePullPolicy: Always
          ports:
            - name: voting
              protocol: TCP
              containerPort: 8080
