app_deploy/mongo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    name: mongo-service
    app: demo-voting-app

spec:
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    name: mongo-pod
    app: demo-voting-app
