app_deploy/result_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-app-service
  labels:
    name: result-app-service
    app: demo-voting-app

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30020
  selector:
    name: result-app-pod
    app: demo-voting-app
