app_deploy/voting_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting
  labels:
    app: voting
    spring-boot: "true"
spec:
  ports:
    - name: voting
      port: 80
      targetPort: 8080
  selector:
    app: voting
