app_deploy/voting_app_gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata: 
  name: voting-gateway
spec:
  selector: 
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
          - voting.app.com
